--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#090d19" />
     <title>Fabio Mallardo | Portfolio</title>
 
-    <link rel="icon" type="image/x-icon" href="src/assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./src/assets/favicon.ico" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
